lab 4/k8s_v2_retry/cinema-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cinema-service-virtual
spec:
  hosts:
    - cinema-service                                # Service, до якого застосовується налаштування
  http:
    - route:
        - destination:
            host: cinema-service                    # Service, до якого застосовується налаштування
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
